--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.chatheads.MainActivity" >
+    android:padding="20dp"
+    android:background="#FEFEFE"
+    tools:context=".activity.DebugOverlayActivity" >
 
     <Button
         android:id="@+id/startService"
@@ -11,6 +13,8 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="27dp"
+        android:textColor="#FFF"
+        android:background="#000"
         android:text="start chat head service" />
 
     <Button
@@ -20,6 +24,8 @@
         android:layout_alignLeft="@+id/startService"
         android:layout_below="@+id/startService"
         android:layout_marginTop="39dp"
+        android:textColor="#FFF"
+        android:background="#000"
         android:text="stop chat head service" />
 
 </RelativeLayout>
