--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_view_airport_map.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_view_airport_map.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/content_view"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
     android:gravity="center"
@@ -12,4 +14,11 @@
        android:src="@drawable/t3_transit"
        />
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/human_token"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/human_token"
+        />
+
+</FrameLayout>
