--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/service_flight_info_overlay.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/service_flight_info_overlay.xml
@@ -8,8 +8,8 @@
 
     <TextView
         android:id="@+id/overlay_text"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:background="@drawable/black_border_white_box"
         android:text="Enter Your Flight for Live Updates!"
         android:textColor="#111"
@@ -42,6 +42,7 @@
             android:layout_weight="1"
             />
 -->
+<!--
         <ImageView
             android:layout_width="100dp"
             android:layout_height="wrap_content"
@@ -49,7 +50,7 @@
             android:layout_gravity="right"
             android:layout_alignParentRight="true"
             android:src="@drawable/butterfly_side" />
-
+-->
     </RelativeLayout>
 
 
