--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
@@ -11,8 +11,10 @@
         android:id="@+id/startService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#FFF"
+        android:textSize="18sp"
         android:background="#000"
         android:text="Start Overlay" />
 
@@ -20,9 +22,43 @@
         android:id="@+id/stopService"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:textColor="#FFF"
+        android:textSize="18sp"
         android:background="#000"
         android:text="Stop Overlay" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="Cheat Factor:"
+        android:textSize="24sp"
+        android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/cheat_factor_edit_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="60"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/update_cheat_factor_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
+        android:background="#000"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:text="Update Cheat Factor"
+        android:textColor="#FFF"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
