--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_debug_overlay.xml
@@ -5,6 +5,7 @@
     android:padding="20dp"
     android:background="#FEFEFE"
     android:orientation="vertical"
+    android:keepScreenOn="true"
     tools:context=".activity.DebugOverlayActivity" >
 
     <Button
