--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_view_airport_map.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/activity_view_airport_map.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFF"
+    android:keepScreenOn="true"
     android:gravity="center">
 
    <ImageView
@@ -29,7 +30,7 @@
         android:layout_height="44dp"
         android:adjustViewBounds="true"
         android:layout_marginLeft="440dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="300dp"
         android:src="@drawable/butterfly_circle"
         />
 
@@ -38,7 +39,7 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:adjustViewBounds="true"
-        android:layout_marginLeft="300dp"
+        android:layout_marginLeft="350dp"
         android:layout_marginTop="340dp"
         android:src="@drawable/mask_circle"
         />
