--- a/java_basic_examples/hello_motion_tracking/src/main/res/layout/service_flight_info_overlay.xml
+++ b/java_basic_examples/hello_motion_tracking/src/main/res/layout/service_flight_info_overlay.xml
@@ -4,6 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:background="#000"
+    android:keepScreenOn="true"
     android:gravity="center">
 
     <TextView
